[gd_scene load_steps=12 format=2]

[ext_resource path="res://Roboto_242.tres" type="DynamicFont" id=1]
[ext_resource path="res://game/player/player.gd" type="Script" id=2]
[ext_resource path="res://game/player/Direction.gd" type="Script" id=3]
[ext_resource path="res://Roboto_52.tres" type="DynamicFont" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 20.0

[sub_resource type="PrismMesh" id=2]

[sub_resource type="MeshTexture" id=3]

[sub_resource type="MeshTexture" id=4]

[sub_resource type="SphereMesh" id=6]

[sub_resource type="MeshTexture" id=7]

[sub_resource type="MeshTexture" id=8]

[node name="player" type="KinematicBody2D" groups=[
"players",
]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="is_jump_allowed" type="ColorRect" parent="Camera2D"]
visible = false
margin_left = 17.9917
margin_top = -32.8991
margin_right = 38.9917
margin_bottom = -14.8991
__meta__ = {
"_edit_use_anchors_": false
}

[node name="is_touching" type="ColorRect" parent="Camera2D"]
visible = false
margin_left = -6.81115
margin_top = -33.4132
margin_right = 6.18885
margin_bottom = -19.4132
__meta__ = {
"_edit_use_anchors_": false
}

[node name="is_drop_allowed" type="ColorRect" parent="Camera2D"]
visible = false
margin_left = -34.0926
margin_top = -33.8627
margin_right = -19.0926
margin_bottom = -17.8627
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBackground" type="ColorRect" parent="Camera2D"]
margin_left = -30.0
margin_top = -50.0
margin_right = 30.0
margin_bottom = -45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="ColorRect" parent="Camera2D/HealthBackground"]
margin_right = 60.0
margin_bottom = 5.0
color = Color( 0.556863, 1, 0.286275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Direction" type="MeshInstance2D" parent="Camera2D"]
position = Vector2( 70, 0 )
rotation = -1.5708
scale = Vector2( 10, 10 )
mesh = SubResource( 2 )
texture = SubResource( 3 )
normal_map = SubResource( 4 )
script = ExtResource( 3 )

[node name="Kills" type="Label" parent="Camera2D"]
visible = false
margin_left = 719.46
margin_top = 264.0
margin_right = 1119.46
margin_bottom = 549.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KillsLabel" type="Label" parent="Camera2D"]
visible = false
margin_left = 819.766
margin_top = 496.0
margin_right = 1019.77
margin_bottom = 579.0
custom_fonts/font = ExtResource( 4 )
text = "Kills"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deaths" type="Label" parent="Camera2D"]
visible = false
margin_left = 719.46
margin_top = -54.0
margin_right = 1119.46
margin_bottom = 231.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathsLabel" type="Label" parent="Camera2D"]
visible = false
margin_left = 819.766
margin_top = 178.0
margin_right = 1019.77
margin_bottom = 261.0
custom_fonts/font = ExtResource( 4 )
text = "Deaths"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
visible = false
margin_left = -19.6842
margin_top = -2.10535
margin_right = 32.3158
margin_bottom = 11.8947
grow_horizontal = 2
text = "<name>"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mesh" type="MeshInstance2D" parent="."]
scale = Vector2( 25, 25 )
mesh = SubResource( 6 )
texture = SubResource( 7 )
normal_map = SubResource( 8 )
